force-app/main/default/objects/E_MOC_Application__c.object
<CustomObject>
    <fields>
        <fullName>People_Likelihood__c</fullName>
        <label>People Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Improbable</fullName>
                </value>
                <value>
                    <fullName>B - Unlikely</fullName>
                </value>
                <value>
                    <fullName>C - Possible</fullName>
                </value>
                <value>
                    <fullName>D - Likely</fullName>
                </value>
                <value>
                    <fullName>E - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>People_RAM_Final__c</fullName>
        <label>People RAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>People_RAM__c</fullName>
        <label>People RAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>People_Remark_Final__c</fullName>
        <label>People Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>People_Remark__c</fullName>
        <label>People Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>People_Severity_Final__c</fullName>
        <label>People Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - No health effect/injury</fullName>
                </value>
                <value>
                    <fullName>1 - Slight health effect/injury (FAC)</fullName>
                </value>
                <value>
                    <fullName>2 - Minor health effect/injury (MTC)</fullName>
                </value>
                <value>
                    <fullName>3 - Major health effect/injury (LWC)</fullName>
                </value>
                <value>
                    <fullName>4 - Permanent Total Disability or 1 to 3 fatalities</fullName>
                </value>
                <value>
                    <fullName>5 - Multiple fatalities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>People_Severity__c</fullName>
        <label>People Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - No health effect/injury</fullName>
                </value>
                <value>
                    <fullName>1 - Slight health effect/injury (FAC)</fullName>
                </value>
                <value>
                    <fullName>2 - Minor health effect/injury (MTC)</fullName>
                </value>
                <value>
                    <fullName>3 - Major health effect/injury (LWC)</fullName>
                </value>
                <value>
                    <fullName>4 - Permanent Total Disability or 1 to 3 fatalities</fullName>
                </value>
                <value>
                    <fullName>5 - Multiple fatalities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>People__c</fullName>
        <formula>&quot;M&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>People</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permanent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pipes_Flanges_Valve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pipes / Flanges / Valve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlantSection__c</fullName>
        <formula>Functional_Location__r.PlantSection__c</formula>
        <label>PlantSection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlantSection_text__c</fullName>
        <formula>IF(Functional_Location__r.PlantSection__c = &apos;T1&apos;, &apos;TOC1&apos;,
IF(Functional_Location__r.PlantSection__c = &apos;T2&apos; , &apos;TOC2&apos;,
IF(Functional_Location__r.PlantSection__c = &apos;T3&apos;, &apos;TOC3&apos;,
IF(Functional_Location__r.PlantSection__c = &apos;T4&apos;, &apos;TOC4&apos;,
IF(Functional_Location__r.PlantSection__c = &apos;T5&apos;, &apos;TOC5&apos; ,
IF(Functional_Location__r.PlantSection__c = &apos;UT&apos;, &apos;SPP&apos; ,
IF(Functional_Location__r.PlantSection__c = &apos;UT2&apos;, &apos;UTIL&apos;,
IF(Functional_Location__r.PlantSection__c = &apos;MO&apos;, &apos;MOV&apos;,
IF(Functional_Location__r.PlantSection__c = &apos;OF&apos;, &apos;OFFS&apos;,
IF(Functional_Location__r.PlantSection__c = &apos;P1&apos;, &apos;TPX&apos; ,
IF(Functional_Location__r.PlantSection__c = &apos;L1&apos;, &apos;TLB&apos; ,
IF(Functional_Location__r.PlantSection__c = &apos;B1&apos;, &apos;LABI&apos; ,
IF(Functional_Location__r.PlantSection__c = &apos;AN&apos;, &apos;Other&apos;,
IF(Functional_Location__r.PlantSection__c = &apos;BU&apos;, &apos;Other&apos;,
IF(Functional_Location__r.PlantSection__c = &apos;CO&apos;, &apos;Other&apos;,&apos; &apos;)
)
)
)
)
)
)
)
)
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PlantSection text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_of_Main_Work_Center__c</fullName>
        <formula>Functional_Location__r.mainWorkCenterPlant__r.Name</formula>
        <label>Plant of Main Work Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Category_1__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Category_2__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Category_3__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Lesson_Learned__c</fullName>
        <label>Position</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position_QA_QC__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_TA_Mandatory__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postpone_unit_shutdown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Postpone unit shutdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Consequence_c__c</fullName>
        <inlineHelpText>Potential Consequence (What happens if it goes wrong?) ผลกระทบ หรืออันตรายที่อาจเกิดขึ้น</inlineHelpText>
        <label>Potential Consequence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ค่าควบคุม (Process Value) มีโอกาสออกนอก Operating Window เนื่องจากไม่มี Alarm เตือน</fullName>
                </value>
                <value>
                    <fullName>มีโอกาส Process upset หรือ Shutdown ได้</fullName>
                </value>
                <value>
                    <fullName>มีโอกาส Equipment upset หรือ Shutdown ได้</fullName>
                </value>
                <value>
                    <fullName>มีโอกาส Equipment เสียหายเนื่องจากขาดสารหล่อลื่น</fullName>
                </value>
                <value>
                    <fullName>มีโอกาส Equipment เสียหายเนื่องจากอุณภูมิสูงกว่าค่า Design ที่สามารถใช้งานได้</fullName>
                </value>
                <value>
                    <fullName>มีโอกาส Equipment เสียหายเนื่องจากไม่มี Liquid หรือ Suction head ที่สามารถทำงานได้ตามค่า Design</fullName>
                </value>
                <value>
                    <fullName>มีโอกาส Equipment เสียหายเนื่องจากไม่มี Gas หรือ Suction head ที่สามารถทำงานได้ตามค่า Design</fullName>
                </value>
                <value>
                    <fullName>มีโอกาส Equipment เสียหาย เนื่องจากไม่ทำงานตาม Function ที่ได้ออกแบบตาม Cause and Effect</fullName>
                </value>
                <value>
                    <fullName>มีโอกาส Process เสียหาย เนื่องจากไม่ทำงานตาม Function ที่ได้ออกแบบตาม Cause and Effect</fullName>
                </value>
                <value>
                    <fullName>มีโอกาส Equipment เสียหายเนื่องจากการ Degrade เมื่อออกนอก Integrity Operating Window</fullName>
                </value>
                <value>
                    <fullName>ไม่มีผลกระทบเนื่องจาก Process shutdown</fullName>
                </value>
                <value>
                    <fullName>ไม่มีผลกระทบเนื่องจาก Equipment shutdown</fullName>
                </value>
                <value>
                    <fullName>อื่นๆ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Risk_c__c</fullName>
        <inlineHelpText>Potential Risk (What can go wrong?) ข้อผิดพลาดหรือความเสี่ยงที่อาจจะเกิดขึ้น</inlineHelpText>
        <label>Potential Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>เมื่อทำการ Disable Alarm  จะไม่มี Alarm เตือน</fullName>
                </value>
                <value>
                    <fullName>เมื่อทำการ Inhibit Alarm จะไม่มี Alarm เตือน</fullName>
                </value>
                <value>
                    <fullName>เมื่อทำการ Override จะไม่มีตัวช่วย Trip หรือ Shutdown process</fullName>
                </value>
                <value>
                    <fullName>เมื่อทำการ Override จะไม่มีตัวช่วย Trip หรือ Shutdown equipment</fullName>
                </value>
                <value>
                    <fullName>เมื่อทำการ Force Signal จะไม่มีตัวช่วย Trip หรือ Shutdown process</fullName>
                </value>
                <value>
                    <fullName>เมื่อทำการ Force Signal จะไม่มีตัวช่วย Trip หรือ Shutdown equipment</fullName>
                </value>
                <value>
                    <fullName>เมื่อทำการ MOS จะไม่มีตัวช่วย Trip หรือ Shutdown process</fullName>
                </value>
                <value>
                    <fullName>เมื่อทำการ MOS จะไม่มีตัวช่วย Trip หรือ Shutdown equipment</fullName>
                </value>
                <value>
                    <fullName>เมื่อทำการ OOS จะไม่มีตัวช่วย Trip หรือ Shutdown process</fullName>
                </value>
                <value>
                    <fullName>เมื่อทำการ OOS จะไม่มีตัวช่วย Trip หรือ Shutdown equipment</fullName>
                </value>
                <value>
                    <fullName>อื่นๆ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_consequence__c</fullName>
        <label>Potential consequence</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Potential_risk__c</fullName>
        <label>Potential risk</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Precaution__c</fullName>
        <label>Precaution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Preservation_unit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preservation unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pressure_Vessels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pressure Vessels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>TEXT(Notification__r.Priority__c)</formula>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Quality_Likelihood_Final__c</fullName>
        <label>Product Quality Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Improbable</fullName>
                </value>
                <value>
                    <fullName>B - Unlikely</fullName>
                </value>
                <value>
                    <fullName>C - Possible</fullName>
                </value>
                <value>
                    <fullName>D - Likely</fullName>
                </value>
                <value>
                    <fullName>E - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Quality_Likelihood__c</fullName>
        <label>Product Quality Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Improbable</fullName>
                </value>
                <value>
                    <fullName>B - Unlikely</fullName>
                </value>
                <value>
                    <fullName>C - Possible</fullName>
                </value>
                <value>
                    <fullName>D - Likely</fullName>
                </value>
                <value>
                    <fullName>E - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Quality_RAM_Final__c</fullName>
        <label>Product Quality RAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Quality_RAM__c</fullName>
        <label>Product Quality RAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Quality_Remark_Final__c</fullName>
        <label>Product Quality Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Quality_Remark__c</fullName>
        <label>Product Quality Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Quality_Severity_Final__c</fullName>
        <label>Product Quality Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - No effect</fullName>
                </value>
                <value>
                    <fullName>1 - Slight effect</fullName>
                </value>
                <value>
                    <fullName>2 - Limited effect</fullName>
                </value>
                <value>
                    <fullName>3 - Considerable effect</fullName>
                </value>
                <value>
                    <fullName>4 - Major effect</fullName>
                </value>
                <value>
                    <fullName>5 - Massive effect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Quality_Severity__c</fullName>
        <label>Product Quality Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - No effect</fullName>
                </value>
                <value>
                    <fullName>1 - Slight effect</fullName>
                </value>
                <value>
                    <fullName>2 - Limited effect</fullName>
                </value>
                <value>
                    <fullName>3 - Considerable effect</fullName>
                </value>
                <value>
                    <fullName>4 - Major effect</fullName>
                </value>
                <value>
                    <fullName>5 - Massive effect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Quality__c</fullName>
        <formula>&quot;M&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pumps_Compressors_Blower_Mixer_includi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pumps / Compressors/Blower/Mixer includi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_QC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA/QC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QMI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QMI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RAM_Rating__c</fullName>
        <formula>IMAGE(&quot;https://thaioil--devthor2--c.visualforce.com/resource/1651830638000/RAM_Rating?&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RAM Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAM_Total_Final__c</fullName>
        <label>RAM Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAM_Total__c</fullName>
        <label>RAM Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAM__c</fullName>
        <formula>&quot; &quot;</formula>
        <label>RAM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQEND_Report__c</fullName>
        <formula>IF(Permanent__c, Completion_date__c, IF(Temporary__c, End_date__c, NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REQEND Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Range</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Readiness_Send_Email_to_MOC_Focal_Point__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Readiness-Send Email to MOC Focal Point</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_MOC_Accomplishment__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Extension_return_to_normal__c</fullName>
        <label>Reason for Extension</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Extension_temporary_MOC__c</fullName>
        <label>Reason for Extension</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_of_Work__c</fullName>
        <label>Reason of Work</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_of_change__c</fullName>
        <label>Reason of change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_for_future_improvement__c</fullName>
        <label>Recommendation for future improvement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Refractory_Fireproof__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refractory/Fireproof</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reliability_Checklist_Link__c</fullName>
        <defaultValue>&apos;https://thaioilintranet.thaioilgroup.com/sites/ISODocument/ISO/ISODocument/Form/QMTS-SFR-19_Reliability%20checklist.xlsx?Web=1&apos;</defaultValue>
        <label>Reliability Checklist Link</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reliability_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reliability Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reliability_Recommendation__c</fullName>
        <defaultValue>&apos;https://thaioilintranet.thaioilgroup.com/sites/ISODocument/ISO/ISODocument/Form/QMTS-SFR-29_Reliability%20Recommendation%20Response%20Sheet%20Form.docx?Web=1&apos;</defaultValue>
        <label>Reliability Recommendation Response</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relief_Systems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relief Systems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remark_Cancel__c</fullName>
        <label>Remark_Cancel</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remark_Monitoring_Program__c</fullName>
        <label>Remark</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reputation_Likelihood_Final__c</fullName>
        <label>Reputation Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Improbable</fullName>
                </value>
                <value>
                    <fullName>B - Unlikely</fullName>
                </value>
                <value>
                    <fullName>C - Possible</fullName>
                </value>
                <value>
                    <fullName>D - Likely</fullName>
                </value>
                <value>
                    <fullName>E - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reputation_Likelihood__c</fullName>
        <label>Reputation Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Improbable</fullName>
                </value>
                <value>
                    <fullName>B - Unlikely</fullName>
                </value>
                <value>
                    <fullName>C - Possible</fullName>
                </value>
                <value>
                    <fullName>D - Likely</fullName>
                </value>
                <value>
                    <fullName>E - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reputation_RAM_Final__c</fullName>
        <label>Reputation RAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reputation_RAM__c</fullName>
        <label>Reputation RAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reputation_Remark_Final__c</fullName>
        <label>Reputation Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reputation_Remark__c</fullName>
        <label>Reputation Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reputation_Severity_Final__c</fullName>
        <label>Reputation Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - No impact</fullName>
                </value>
                <value>
                    <fullName>1 - Slight impact</fullName>
                </value>
                <value>
                    <fullName>2 - Limited impact, Local Media</fullName>
                </value>
                <value>
                    <fullName>3 - Considerable impact, Regional media</fullName>
                </value>
                <value>
                    <fullName>4 - National impact</fullName>
                </value>
                <value>
                    <fullName>5 - International impact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reputation_Severity__c</fullName>
        <label>Reputation Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - No impact</fullName>
                </value>
                <value>
                    <fullName>1 - Slight impact</fullName>
                </value>
                <value>
                    <fullName>2 - Limited impact, Local Media</fullName>
                </value>
                <value>
                    <fullName>3 - Considerable impact, Regional media</fullName>
                </value>
                <value>
                    <fullName>4 - National impact</fullName>
                </value>
                <value>
                    <fullName>5 - International impact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reputation__c</fullName>
        <formula>&quot;M&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reputation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_ID__c</fullName>
        <formula>Requestor_Name__r.Employee_Id__c</formula>
        <label>Requestor ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Name_Text__c</fullName>
        <formula>Requestor_Name__r.FirstName &amp;&quot; &quot;&amp; Requestor_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_Application1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_TA_review_by_MOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return TA review by MOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_to_Normal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return to Normal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Analysis_Guideline__c</fullName>
        <defaultValue>&apos;https://thaioilgroup0.sharepoint.com/:p:/s/EMOCSystemDocument/EahswVe-T8RFj5kln-V15vEBy_BGv45HGYPTi2926qVwIQ?e=hYRHTw&apos;</defaultValue>
        <label>Risk Analysis Guideline</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_analysis_report__c</fullName>
        <label>Risk analysis report</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rotating_equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rotating equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBM_CBM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SBM / CBM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SIF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIL_Level__c</fullName>
        <label>SIL Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-SIL</fullName>
                </value>
                <value>
                    <fullName>SIL 1</fullName>
                </value>
                <value>
                    <fullName>SIL 2</fullName>
                </value>
                <value>
                    <fullName>SIL 3</fullName>
                </value>
                <value>
                    <fullName>No SIL Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOF_SU_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOF/SU Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safeguarding_force_signal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safeguarding force signal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safety_Equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>(e.g, fire monitors, SCBAs, sprinklers, safety shower, etc)</inlineHelpText>
        <label>Safety Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_email_from_ADOE_to_MOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send email from ADOE to MOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_to_ADOE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to ADOE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_to_MROx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to MROx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shell_Tube_Heat_Exchangers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shell &amp; Tube Heat Exchangers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Correct_the_problem_section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Correct the problem section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Edit_button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Edit button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Lesson_Learn_section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Lesson Learn section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Require_to_Extend__c</fullName>
        <label>Show Require to Extend</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Show_Submit_Button_B_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Submit Button B 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Submit_Button_B_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Submit Button B 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Submit_Button_B__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Submit Button B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Submit_Button_Emergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Submit Button Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_TA_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show TA Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_TA_section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show TA section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Technical_review_by_MOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Technical review by MOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Verify_button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Verify button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Verify_by_pass_button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Verify by pass button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stamp_date_ADOE_Verify__c</fullName>
        <label>Stamp date ADOE Verify</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stamp_date_APU_Approval__c</fullName>
        <label>Stamp date APU Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stamp_date_Approval2_FN__c</fullName>
        <label>Stamp date Approval2 FN</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stamp_date_Approval_APU__c</fullName>
        <label>Stamp date Approval(APU)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stamp_date_Approval_VP__c</fullName>
        <label>Stamp date Approval(VP)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stamp_date_FN_Implementation1__c</fullName>
        <label>Stamp date FN Implementation1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stamp_date_FN_Implementation2__c</fullName>
        <label>Stamp date FN Implementation2</label>
        <type>Date</type>
    </fields>
</CustomObject>